tests/trybuild/views/unexpected_token.stderr
error: no rules expected the token `+`
 --> tests/trybuild/views/unexpected_token.rs:7:25
  |
7 | type Views = Views!(&A, + &B,);
  |                         ^ no rules expected this token in macro call
  |
note: while trying to match meta-variable `$views:ty`
 --> src/query/view/mod.rs
  |
  |             ($view:ty $(,$views:ty)* $(,)?) => (
  |                          ^^^^^^^^^
